@@ -13,6 +13,7 @@ Fixed Notice:  Undefined variable: db_logging in planet_report_ce.php
 Fixed Notice:  Use of undefined constant corp - assumed 'corp' in planet_report.php
 Fixed Genesis bug that wouldn't allow you to create more than 1 planet in the same sector.
 Fixed exploit where a player could scan or attack a ssip without clicking on them first, multi refresh scan exploit.
+Cleaned up rsmove.php
 
 TheMightyDude (19 July 2012)
 --------------------------------------
